[package]
name = "catboys-space-backend"
version = "0.1.0"
authors = ["Daniel Conley <himself@danii.dev>","ibx34 <Guamjust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
rocket = "0.4.7" # 1234567890
rocket_contrib = "0.4.7"
serde = {version = "1.0.123", features = ["derive"]}
