[package]
name = "catboys-space-backend"
version = "0.1.0"
authors = ["Daniel Conley <himself@danii.dev>", "ibx34 <Guamjust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
delegate-attr = "0.2.9"
# lazy_static = "1.4.0"
parking_lot = "0.11.1"
postgres = "0.19.0"
# regex = "1.4.3"
rocket = "0.4.7" # 1234567890
rocket_contrib = "0.4.7"
rust_decimal = {version = "1.10.3", features = ["db-postgres"]}
serde = {version = "1.0.123", features = ["derive"]}

[profile.release]
debug = true
